<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View"/>

        <variable
            name="presenter"
            type="com.wizlif144.journalapp.ui.starter.signup.SignupPresenter" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_10">


        <View
            android:layout_width="match_parent"
            android:layout_height="220.000000dip"
            android:background="@color/colorPrimary" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_middle"
                android:visibility="visible"
                app:cardCornerRadius="6.000000dip"
                app:cardElevation="5.000000dip">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_mlarge">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/spacing_xlarge"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:text="SIGN UP"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/green_500"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:error="@{presenter.emailError}">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16777212.000000dip"
                            android:layout_marginRight="16777212.000000dip"
                            android:inputType="text"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/blue_600"
                            android:textStyle="bold"
                            android:theme="@style/EditText.Grey"
                            app:binding="@{presenter.email}"/>

                    </android.support.design.widget.TextInputLayout>


                    <View
                        android:layout_width="0.000000dip"
                        android:layout_height="@dimen/spacing_mlarge" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:error="@{presenter.passwordError}">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16777212.000000dip"
                            android:layout_marginRight="16777212.000000dip"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/blue_600"
                            android:textStyle="bold"
                            android:theme="@style/EditText.Grey"
                            app:binding="@{presenter.password}"/>

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:error="@{presenter.confirmPasswordError}">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16777212.000000dip"
                            android:layout_marginRight="16777212.000000dip"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/blue_600"
                            android:textStyle="bold"
                            android:theme="@style/EditText.Grey"
                            app:binding="@{presenter.confirmPassword}"/>

                    </android.support.design.widget.TextInputLayout>


                    <View
                        android:layout_width="0.000000dip"
                        android:layout_height="@dimen/spacing_middle" />

                    <Button
                        android:id="@+id/bt_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="55.000000dip"
                        android:layout_marginLeft="16777212.000000dip"
                        android:layout_marginRight="16777212.000000dip"
                        android:layout_weight="1"
                        android:background="@drawable/btn_rounded_primary"
                        android:text="S I G N U P"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Have an account? "
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/blue_grey_300" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:text="Login"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorPrimaryLight"
                            android:textStyle="bold" />


                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>


            <View
                android:layout_width="0.000000dip"
                android:layout_height="@dimen/spacing_large" />


        </LinearLayout>
        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/notes_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{presenter.isLoading ? View.VISIBLE : View.GONE}" />

    </RelativeLayout>
</layout>